--- a/got.html
+++ b/got.html
@@ -12,10 +12,17 @@
   stroke-width: 1.5px;
 }
 
+.legend {
+  position: absolute;
+  right: 1%;
+  top: 1%;
+}
+
 
 </style>
 <body>
 <svg width="1600" height="800"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="js/graph_slider.js"></script>
+<div id="legend"></div>
 </body>
